# gendiff

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main.yml
gendiff/: __init__.py  cli.py  consts.py  diff_builder.py  gendiff.py  gendiff_file.py  generate_difference.py  parser.py
gendiff/formatters/: __init__.py  json.py  json_format.py  plain.py  plain_format.py  print_diff.py  select_format.py  stylish_format.py
gendiff/scripts/: gendiff.py  gendiff.py.save  gendiff_file.py  generate_differance.py  parser.py
tests/: gendiff_test.py
tests/fixtures/: exp_json.txt  expected_json.txt  expected_json_format.txt  expected_json_format1.txt  expected_json_format2.txt  file1.yml  file2.yml  gendiff_test.py
