[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Project num.2"
authors = ["Sesiunina Olga <sesyunina.olga7@gmail.com>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
